# OpenTensor

./: CMakeLists.txt  README.md
docs/: 404.html  index.html  search.html  sitemap.xml
docs/about/about/: index.html
docs/documentation/documentation/: index.html
docs/search/: search_index.json
include/: opentensor.h
include/AST2IR/: ast.h  ast2ir.h  ast2ir.h.bak  expr_pat.h
include/IR/: irgraph.h  irnode.h
include/IR2SYCL/: codegen.h
include/kernel/: kernel.h
lib/: CMakeLists.txt
lib/AST2IR/: CMakeLists.txt  ast2ir.cpp  ast2ir.cpp.bak  expr_pat.cpp
lib/AST2IR/python/: pyast2ir.py
lib/IR/: CMakeLists.txt  irgraph.cpp  irgraph_dumper.cpp  irnode.cpp  task_irnode.cpp
lib/IR2SYCL/: CMakeLists.txt  codegen.cpp
lib/kernel/: CMakeLists.txt
lib/wrap/: CMakeLists.txt  ir_wrapper.cpp
python/: irgraph.py  irnode.py  pyast2ir.py  traverse.py
python/pass/: shape_inference.py
python/passes/: idx_infer.py  partition.py  shape_infer.py  shape_inference.py
script/: format.sh
test/: einsum.h  jacobi.cpp  matmul-new.cpp  matmul.cpp  matmul.py  matmul2.cpp  opentensor.h  stencil.cpp
test/binding_test/: irgraph_test.py
test/python-frontend/: add.py  idx_infer_test.py  sliceop_test.py
website/: mkdocs.yml
website/docs/: index.md
website/docs/documentation/: documentation.md
website/site/: index.html  search.html  sitemap.xml
website/site/documentation/documentation/: index.html
website/site/search/: search_index.json
